Fix warning deprecate new URL in java 21
- new URL -> new URI::toURL